    o #1004596 by pillarsdotnet:  Wrong usage of theme('image'...) in contact field handler.
    o #1006088 by aspilicious: Remove unneeded files from .info file.
    o #1005662 by troky: Change original hook to base hook in views hook_theme.
    o #808016 by dereine: Clarify short/medium/long date formats.
    o #829928 by gordon: Allow strip tags to get a list of tags to keep.
    o #1004538 by ngmaloney, bojanz: Support timestamps before 1970 in views date sql.
    o #522318 by dereine: Provide a "human readable" name for all Views.
    o #1003112 by ralf: Add configure line to views_ui.info
    o #118672: Allow an OR in filters by adding groups in the filter UI.
    o by dereine: Add a test for field math, and fix the field math :)
    o #1007036 by bojanz: Fix Node: Has new content filter.
    o by dereine: Add a test for filter equality.
    o by dereine: Add a test for field counter.
    o #1007036 by dereine: Fix join condition for Node: Has new content filter.
    o by dereine: Fix tests for detecting module template files.
    o #1007730 by bojanz, merlinofchaos, dereine: Fix views_handler_filter_string, add tests and add a general placeholder method.
    o #1006644 by bojanz, dereine: Allow field field handler to work with users.
    o #759082 by dereine: Fix whitescreen due to incorrect relationship loop code.
    o by dereine: Remove old comment about select::countQuery.
    o #863478 by damz, dereine: Allow basic distinct support.
    o #667950 by bec : Remove workaround for filter_numeric dependency.
    o #1011266 by sime: Fix whitescreen due to changes in #759082.
    o #1011220 by aspilicious: Auto-Generate View's Machine-Readable Name.
    o #1001542 by mikeytown2: view::set_display() has wrong return code when it fails.
    o #1011220 follow-up: Add missing point on machine_name.
    o #722330 by dereine: Views should include core version for updates.
    o #1008706 by dereine: Convert placeholders to new api.