@@ -1,4 +1,4 @@
-<!-- $Id: api-upgrading.html,v 1.1.2.3 2010-11-05 07:20:54 dereine Exp $ -->
+<!-- $Id: api-upgrading.html,v 1.1.2.4 2011-01-03 18:03:55 dereine Exp $ -->
 In order to take advantage of the changes in Drupal 7, Views has gone through several API changes.
 Here's what you should know.
 
@@ -24,6 +24,9 @@ files[] = includes/views/handlers/example_handler_argument_string.inc
 Note that views_handler_filter_float has been removed.
 This functionality is now handled by views_handler_filter_numeric.
 There's no need for having a special handler any more, thanks to the new DB layer in Drupal 7.
+
+views_handler_sort_formula has been removed.
+Everyone who used it can extend from views_handler_sort, too.
 
 <h3>Ctools dependency</h3>
 Views requires ctools now, so it can use the dependency system of ctools.
