@@ -592,3 +592,4 @@ Views 3.x-7.x-dev
     o #1011220 follow-up: Add missing point on machine_name.
     o #722330 by dereine: Views should include core version for updates.
     o #1008706 by dereine: Convert placeholders to new api.
+    o #807616 by damz, dereine: Remove views_handler_sort_formula and add a short entry in api-upgrading.html
